--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -8,13 +8,14 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="19" />
 
-    <application	
+    <application
+        android:name="pe.edu.upc.practica01.application.MyApplication"	
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name="pe.edu.upc.practica01.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
